# MLopsStockNewsAnalysis

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  client.py  pyproject.toml
modules/: infer.py  train.py
